# project-classification

./: .gitignore  Cargo.toml  README.md  output.dump  output.sql  schema.json
.github/ISSUE_TEMPLATE/: add_project.yaml
.github/workflows/: add-project-generate.yml  create-sync.yml  json_serving.yml  manual-trigger-import.yml  redeploy-lambdas.yml  schedule-import.yml  validate-json.yml
data/projects/: Acala.json  acala.json  acurast.json  apillon.json  astar.json  ava-protocol.json  avail.json  centrifuge.json  chainsafe.json  darwinia.json  dotcodeschool.json  eluvio.json  hackathonideas.json  hydration.json  hyperbridge.json  ink.json  integritee.json  interlay.json  kilt.json  kodadot.json  kudos.json  kudos2.json  kudos_new.json  kudos_test.json  laos.json  moonbeam.json  nova-wallet.json  open-zeppelin.json  origin-trail.json  origintrail.json  pendulum.json  pluto-wallet.json  pluto.json  polimec.json  polkadot-fellows.json  polkadot.json  polkassembly.json  pop-network.json  project-slugg.json  region-x.json  (+17 more)
projects/: kudos.json
scripts/: process-issue.js
src/import/: Cargo.toml
src/import/payloads/: kudos.json  polkadot.json  substrate.json  template.json
src/import/src/: README.md  main.rs
src/notification_triggered/: Cargo.toml
src/notification_triggered/payloads/: test.json
src/periodic_sync/: Cargo.toml
src/scripts/: Cargo.toml
src/scripts/src/: main.rs
src/shared/: Cargo.toml
src/shared/src/: functions.rs  lib.rs  types.rs
src/sync/: Cargo.toml
src/sync/payloads/: payload.json  payload_with_attrs.json
src/sync/src/: main.rs
(+3 files in other folders)
