[package]
name = "gh-sync-repositories"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.38"
lambda_http = "0.13.0"
octocrab = "0.39.0"
serde = "1.0.205"
serde_json = "1.0.122"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "json", "chrono"] }
tokio = { version = "1", features = ["macros"] }

shared = { path = "../shared" }
